Update: Improve translations, add link to projects, fix footer overflow, add global link styles

--- a/src/app/[lang]/layout.module.scss
+++ b/src/app/[lang]/layout.module.scss
@@ -4,16 +4,17 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-color: $backgroundTeal;
 }
 
 .contentContainer {
+    margin-top: 2.5rem;
     flex-grow: 1;
     overflow: hidden;
     padding: 2rem 7rem 100px 7rem;
-    text-align: left;
 
     @media screen and (max-width: $screen-m) {
-        padding: 2rem 4rem;
+        padding: 2rem 2rem 100px 2rem;
     }
     /* must be same height as the footer */
 }
